Added js-script for carousel with services

--- a/index.html
+++ b/index.html
@@ -74,118 +74,12 @@
     <main>
         <!--Special offers and services section-->
         <section class="first-section">
-            <!-- Roundabout with services -->
-            <div id="carousel-container" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carousel-container" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carousel-container" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carousel-container" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carousel-container" data-bs-slide-to="3"
-                        aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carousel-container" data-bs-slide-to="4"
-                        aria-label="Slide 5"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <div id="carousel__logo-bg"><img src="img/icons/money-back.svg" class="d-block" alt="..."></div>
-                        <div class="carousel-caption text-start">
-                            <h5>Money backl</h5>
-                            <p>30-days guarantee</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <div id="carousel__logo-bg"><img src="img/icons/support.svg" class="d-block " alt="..."></div>
-                        <div class="carousel-caption text-start">
-                            <h5>24/7 Support</h5>
-                            <p>We work round the clock</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div id="carousel__logo-bg"><img src="img/icons/fast-del.svg" class="d-block " alt="..."></div>
-                        <div class="carousel-caption text-start">
-                            <h5>Fast delivery</h5>
-                            <p>In 2-4 business days</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <div id="carousel__logo-bg"><img src="img/icons/free-ship.svg" class="d-block " alt="..."></div>
-                        <div class="carousel-caption text-start">
-                            <h5>Free Shipping</h5>
-                            <p>For all orders over $100</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div id="carousel__logo-bg"><img src="img/icons/fast-del.svg" class="d-block " alt="..."></div>
-                        <div class="carousel-caption text-start">
-                            <h5>Fast delivery</h5>
-                            <p>In 2-4 business days</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carousel-container"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel-container"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-
-            <!-- End of carousel -->
             <div class="services">
                 <div class="services__type">
-                    <div class="item">
-                        <div class="item__icon">
-                            <img width="50" src="img/icons/money-back.svg" alt="Money back">
-                        </div>
-                        <div class="item__text">
-                            <h3>Money back</h3>
-                            <p>30-days guarantee</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="item__icon">
-                            <img width="50" src="img/icons/support.svg" alt="24/7 Support">
-                        </div>
-                        <div class="item__text">
-                            <h3>24/7 Support</h3>
-                            <p>We work round the clock</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="item__icon">
-                            <img width="50" src="img/icons/fast-del.svg" alt="Fast delivery">
-                        </div>
-                        <div class="item__text">
-                            <h3>Fast delivery</h3>
-                            <p>In 2-4 business days</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="item__icon">
-                            <img width="50" src="img/icons/support.svg" alt="24/7 Support">
-                        </div>
-                        <div class="item__text">
-                            <h3>24/7 Support</h3>
-                            <p>We work round the clock</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="item__icon">
-                            <img width="50" src="img/icons/free-ship.svg" alt="Free Shipping">
-                        </div>
-                        <div class="item__text">
-                            <h3>Free Shipping</h3>
-                            <p>For all orders over $100</p>
-                        </div>
-                    </div>
+
                 </div>
+                <div class="services__button-next">Next</div>
+                <div class="services__button-prev">Prev</div>
             </div>
 
             <!--Tabs and services section-->
@@ -1153,6 +1047,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
+    <script src="js/roundabout.js"></script>
 </body>
 
 </html>
