Added buttons for carousel and upgraded carousel to for elements in row

--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
     <main>
         <!--Special offers and services section-->
         <section class="first-section">
-            <div class="services">
+            <div class="services container">
                 <div class="services__type">
-
                 </div>
-                <div class="services__button-next">Next</div>
-                <div class="services__button-prev">Prev</div>
+                <div class="services__button-next"><span><img src="img/icons/right-arrow.png" alt="next arrow"></span>
+                </div>
+                <div class="services__button-prev"><span><img src="img/icons/back-arrow.png" alt="prev arrow"></span>
+                </div>
             </div>
 
             <!--Tabs and services section-->
