--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
         </section>
         <section class="person">
             <div class="person1">
-                <img src="img/man-with-headphones.png" id="person1" alt="man-with-headphones">
+                <img src="img/man-with-headphones.png" id="person1" alt="${person.name}">
             </div>
             <div class="name1">
                 <h3>Dean Williams</h3>
@@ -733,7 +733,7 @@
             <div class="date1">
                 <h4>December 15,2020</h4>
             </div>
-        </section>
+        </section> 
 
         <br>
         <section class="person">
@@ -1048,6 +1048,7 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
     <script src="js/roundabout.js"></script>
+    <script src="js/roundreviews.js"></script>
 </body>
 
 </html>
