--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <!--Navigation-->
         <section class="banner-bg banner-bg_origin">
-            <div class="container-top container-top_flex">
+            <div class="container-section">
                 <nav class="navigation">
                     <div class="navigation-logo">
                         <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
@@ -86,158 +86,14 @@
             <!--Tabs and services section-->
             <div id="container-top">
 
-                <nav>
-                    <div class="nav nav-tabs " id="nav-tab" role="tablist">
-                        <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab"
-                            data-bs-target="#featured" type="button" role="tab" aria-controls="nav-home"
-                            aria-selected="true">Featured</button>
-                        <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#sale"
-                            type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Sale</button>
-                        <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#new"
-                            type="button" role="tab" aria-controls="nav-contact" aria-selected="false">New</button>
-                    </div>
-                </nav>
-                <div class="tab-content" id="nav-tabContent">
-                    <div class=" tab-pane fade show active row" id="featured" role="tabpanel"
-                        aria-labelledby="nav-home-tab">
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3 " id="tab__item">
-                            <a class="tabs__image" href="product-card.html"><img class="d-block img-fluid mx-auto"
-                                    id="tabs__img" src="img/featured/jbl-rr.png" alt="jbl RR-56"></a>
-                            <a class="tabs__product-name" href="product-card.html">JBL RR-56</a>
-                            <p>$110,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/featured/sennheiser-sn.png" alt="Sennheiser SN-67"></a>
-                            <a class="tabs__product-name" href="">Sennheiser SN-67</a>
-                            <p>$213,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
-                            <a class="tabs__product-name" href="">JBL GT-345</a>
-                            <p>$120,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/featured/sony-s.png" alt="Sony S890"></a>
-                            <a class="tabs__product-name" href="">Sony S890</a>
-                            <p>$259,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-                    </div>
-                    <div class="d-flex flex-row tab-pane fade row" id="sale" role="tabpanel"
-                        aria-labelledby="nav-profile-tab">
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto sm"
-                                    src="img/sale/marshall-dr.png" alt="Marshal DR67"></a>
-                            <a class="tabs__product-name" href="">Marshal DR67</a>
-                            <p>$459,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
-                            <a class="tabs__product-name" href="">V-MODA ER65</a>
-                            <p>$80,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/sale/bose-g.png" alt="Bose G656-A"></a>
-                            <a class="tabs__product-name" href="">Bose G656-A</a>
-                            <p>$65,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto sm"
-                                    src="img/sale/airpulse-r.png" alt="AirPulse R255"></a>
-                            <a class="tabs__product-name" href="">AirPulse R255</a>
-                            <p>$185,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                    </div>
-                    <div class="d-flex flex-row tab-pane fade row" id="new" role="tabpanel"
-                        aria-labelledby="nav-contact-tab">
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/new/sony-y.png" alt="Sony YT555"></a>
-                            <a class="tabs__product-name" href="">Sony YT555</a>
-                            <p>$140,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/new/sony-tt.png" alt="Sony TT56"></a>
-                            <a class="tabs__product-name" href="">Sony TT56</a>
-                            <p>$98,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/new/jbl-br.png" alt="JBL BR-55"></a>
-                            <a class="tabs__product-name" href="">JBL BR-55</a>
-                            <p>$110,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-
-                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
-                                    src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
-                            <a class="tabs__product-name" href="">JBL 334WN</a>
-                            <p>$140,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-                        </article>
-                    </div>
-                </div>
-
-
-                <!-- <div class="tabs">
+                <div class="tabs">
                     <div class="tabs__head">
-                        <a href="#tab_01" class="tabs__name">Featured</a>
-                        <a href="#tab_02" class="tabs__name">Sale</a>
-                        <a href="#tab_03" class="tabs__name">New</a>
+                        <a href="#tab-1" class="tabs__name">Featured</a>
+                        <a href="#tab-2" class="tabs__name">Sale</a>
+                        <a href="#tab-3" class="tabs__name">New</a>
                     </div>
                     <div class="tabs__body">
-
-
-                        <div id="tab_01" class="tabs__content">
+                        <div id="tab-1" class="tabs__content">
                             <article class="tabs__container">
                                 <a class="tabs__image" href="product-card.html"><img src="img/featured/jbl-rr.png"
                                         alt="jbl RR-56"></a>
@@ -278,7 +134,7 @@
                         </div>
 
 
-                        <div id="tab_02" class="tabs__content">
+                        <div id="tab-2" class="tabs__content">
                             <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/sale/marshall-dr.png"
                                         alt="Marshal DR67"></a>
@@ -319,7 +175,7 @@
                         </div>
 
 
-                        <div id="tab_03" class="tabs__content">
+                        <div id="tab-3" class="tabs__content">
                             <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/new/sony-y.png" alt="Sony YT555"></a>
                                 <a class="tabs__product-name" href="">Sony YT555</a>
@@ -357,17 +213,19 @@
                             </article>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="offers-cotainer">
                     <div class="offer-jbl">
                         <h2>JBL Speakers</h2>
                         <p class="offer__strike"><span>$300.00</span> $250.00</p>
+                        <p class="offer__date"> </p>
                         <p class="offer__text">Special price on a variety of JBL loudspeakers.</p>
                         <a class="offer__button offer__button_black" href=""><span>LEARN MORE</span></a>
                     </div>
                     <div class="offer-special">
                         <p>SPECIAL OFFER</p>
                         <h2>Headphones Sale</h2>
+                        <h2 id="112" class="offer-special__time-left"></h2>
                         <a class="offer__button offer__button_white" href=""><span>LEARN MORE</span></a>
                     </div>
                 </div>
@@ -1049,6 +907,9 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
     <script src="js/roundabout.js"></script>
+    <script src="js/tabs.js"></script>
+    <script src="js/countdown-clock-to-date.js"></script>
+    <script src="js/countdown-clock-time.js"></script>
 </body>
 
 </html>
