Added js script for <tabs>

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 
                 <div class="tabs">
                     <div class="tabs__head">
-                        <a href="#tab-1" class="tabs__name">Featured</a>
-                        <a href="#tab-2" class="tabs__name">Sale</a>
-                        <a href="#tab-3" class="tabs__name">New</a>
+                        <a href="#" data-tab-name="1" class="tabs__name active">Featured</a>
+                        <a href="#" data-tab-name="2" class="tabs__name">Sale</a>
+                        <a href="#" data-tab-name="3" class="tabs__name">New</a>
                     </div>
                     <div class="tabs__body">
-                        <div id="tab-1" class="tabs__content">
+                        <div data-tab-content="1" class="tabs__content active">
                             <article class="tabs__container">
                                 <a class="tabs__image" href="product-card.html"><img src="img/featured/jbl-rr.png"
                                         alt="jbl RR-56"></a>
@@ -134,7 +134,7 @@
                         </div>
 
 
-                        <div id="tab-2" class="tabs__content">
+                        <div data-tab-content="2" class="tabs__content">
                             <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/sale/marshall-dr.png"
                                         alt="Marshal DR67"></a>
@@ -175,7 +175,7 @@
                         </div>
 
 
-                        <div id="tab-3" class="tabs__content">
+                        <div data-tab-content="3" class="tabs__content">
                             <article class="tabs__container">
                                 <a class="tabs__image" href="#"><img src="img/new/sony-y.png" alt="Sony YT555"></a>
                                 <a class="tabs__product-name" href="">Sony YT555</a>
