Added indicators for carousel

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
                 </div>
                 <div class="services__button-prev"><span><img src="img/icons/back-arrow.png" alt="prev arrow"></span>
                 </div>
+                <ul class="services__indicators">
+                    <li class="services__indicator active"></li>
+                    <li class="services__indicator"></li>
+                    <li class="services__indicator"></li>
+                    <li class="services__indicator"></li>
+                    <li class="services__indicator"></li>
+                </ul>
             </div>
 
             <!--Tabs and services section-->
