--- a/index.html
+++ b/index.html
@@ -567,9 +567,8 @@
         </section>
         <!--roundabout reviews-->
         <section class="our-customers-say">
-            <div class="reviews__type"> </div>;
-                <div class="reviews__button-1"> Тиць</div>;
-            <div class="reviews__button-2">Тиць</div>;
+            <div class="reviews-type"> 
+            </div>;
             <div class="title-our-customer-say">
                 <h2>Our Customers Say</h2>
             </div>
@@ -582,7 +581,7 @@
         </section>
         <section class="person">
             <div class="person1">
-                <img src="img/man-with-headphones.png" id="person1" alt="${person.name}">
+                <img src="img/man-with-headphones.png" id="person1" alt="man-with-headphones"">
             </div>
             <div class="name1">
                 <h3>Dean Williams</h3>
@@ -631,8 +630,7 @@
                 <h4>May 29,2021</h4>
             </div>
         </section>
-
-
+                
         <article class="News">
             <section class="popular-article">
                 <div class="title-pop-art"></div>
