Added <smoth scroll> on page and upgrade the carousel of services

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
                     </div>
                     <div class="navigation-wrapper">
                         <div class="navigation-pages">
-                            <a data-goto=".data-name_2" href="#"
+                            <a data-goto=".navigation-way_1" href="#"
                                 class="navigations__speakers navigation__link">Speakers</a>
-                            <a data-goto=".data-name_4" href="#" class="navigations__news navigation__link">News</a>
-                            <a data-goto=".data-name_3" href="#"
+                            <a data-goto=".navigation-way_2" href="#"
+                                class="navigations__news navigation__link">News</a>
+                            <a data-goto=".navigation-way_3" href="#"
                                 class="navigations__testimonials navigation__link">Testimonials</a>
-                            <a data-goto=".data-name_1" href="#"
+                            <a data-goto=".navigation-way_4" href="#"
                                 class="navigations__headphones navigation__link">Headphones</a>
                         </div>
                         <div class="navigation-social">
@@ -62,7 +63,7 @@
                 </nav>
                 <!--Main page-->
                 <div class="banner">
-                    <div class="banner__text">
+                    <div class="banner__text ">
                         <h1>Great Sound at Low Prices</h1>
                         <p>Headphones and loudspeakers from the best brands.</p>
                     </div>
@@ -97,7 +98,7 @@
             <!--Tabs and services section-->
             <div id="container-top">
 
-                <div class="tabs data-name_1">
+                <div class="tabs navigation-way_4">
                     <div class="tabs__head">
                         <a href="#" data-tab-name="1" class="tabs__name active">Featured</a>
                         <a href="#" data-tab-name="2" class="tabs__name">Sale</a>
@@ -406,7 +407,7 @@
         </div>
         <!--Fourth section (beginning)-->
         <section class="fourth-section">
-            <div class="Speakers">
+            <div class="Speakers navigation-way_1">
                 <header>
                     <h2>Speakers</h2>
                     <img class="logo" width="100" src="img/de2.svg" alt="logo">
@@ -577,7 +578,7 @@
 
         </section>
         <!--roundabout reviews-->
-        <section class="our-customers-say data-name_4">
+        <section class="our-customers-say navigation-way_3">
             <div class="reviews__type"> </div>;
             <div class="reviews__button-1"> Тиць</div>;
             <div class="reviews__button-2">Тиць</div>;
@@ -650,7 +651,7 @@
             </section>
 
 
-            <article class="News">
+            <article class="News navigation-way_2">
                 <section class="popular-article">
                     <div class="title-pop-art"></div>
                     <h2>Popular Articles</h2>
@@ -930,7 +931,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
-    <script src="js/burger-menu.js"></script>
+    <script src="js/burger-menu-and-smoth-scroll.js"></script>
     <script src="js/roundabout.js"></script>
     <script src="js/tabs.js"></script>
     <script src="js/countdown-clock-to-date.js"></script>
