Added products loading from json

--- a/product-card.html
+++ b/product-card.html
@@ -105,7 +105,7 @@
 
     <main class="product-page container-top container-top_card">
         <!-- <a href="" class="store-homepage">Store homepage</a> -->
-        <div class="product-picture">
+        <!-- <div class="product-picture">
             <img class="img-main" src="img/sale/airpulse-r.png" alt="product">
         </div>
         <div class="product-text">
@@ -138,12 +138,13 @@
                     <p>Wireless range — 35 m</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
+    <script src="js/audio-products-list.js"></script>
 </body>
 
 </html>
