Tried to make link for each product

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             </article>
 
                             <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/featured/sennheiser-sn.png"
+                                <a class="tabs__image" data-id="2" href="#"><img src="img/featured/sennheiser-sn.png"
                                         alt="Sennheiser SN-67"></a>
                                 <a class="tabs__product-name" href="">Sennheiser SN-67</a>
                                 <p>$213,00</p>
@@ -937,6 +937,7 @@
     <script src="js/countdown-clock-to-date.js"></script>
     <script src="js/countdown-clock-time.js"></script>
     <script src="js/roundreviews.js"></script>
+    <script src="js/product-way.js"></script>
 </body>
 
 </html>
