Made products loading from json to tabs

--- a/index.html
+++ b/index.html
@@ -105,124 +105,11 @@
                         <a href="#" data-tab-name="3" class="tabs__name">New</a>
                     </div>
                     <div class="tabs__body">
-                        <div data-tab-content="1" class="tabs__content active">
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="product-card.html"><img src="img/featured/jbl-rr.png"
-                                        alt="jbl RR-56"></a>
-                                <a class="tabs__product-name" href="product-card.html">JBL RR-56</a>
-                                <p>$110,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image" data-id="2" href="#"><img src="img/featured/sennheiser-sn.png"
-                                        alt="Sennheiser SN-67"></a>
-                                <a class="tabs__product-name" href="">Sennheiser SN-67</a>
-                                <p>$213,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
-                                <a class="tabs__product-name" href="">JBL GT-345</a>
-                                <p>$120,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/featured/sony-s.png" alt="Sony S890"></a>
-                                <a class="tabs__product-name" href="">Sony S890</a>
-                                <p>$259,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
+                        <div data-tab-content="1" id="featured" class="tabs__content active">
                         </div>
-
-
-                        <div data-tab-content="2" class="tabs__content">
-                            <article class="tabs__container">
-                                <a class="tabs__image sm" href="#"><img src="img/sale/marshall-dr.png"
-                                        alt="Marshal DR67"></a>
-                                <a class="tabs__product-name " href="">Marshal DR67</a>
-                                <p>$459,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
-                                <a class="tabs__product-name" href="">V-MODA ER65</a>
-                                <p>$80,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/sale/bose-g.png" alt="Bose G656-A"></a>
-                                <a class="tabs__product-name" href="">Bose G656-A</a>
-                                <p>$65,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image sm" href="#"><img src="img/sale/airpulse-r.png"
-                                        alt="AirPulse R255"></a>
-                                <a class="tabs__product-name" href="">AirPulse R255</a>
-                                <p>$185,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
+                        <div data-tab-content="2" id="sale" class="tabs__content">
                         </div>
-
-
-                        <div data-tab-content="3" class="tabs__content">
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/new/sony-y.png" alt="Sony YT555"></a>
-                                <a class="tabs__product-name" href="">Sony YT555</a>
-                                <p>$140,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/new/sony-tt.png" alt="Sony TT56"></a>
-                                <a class="tabs__product-name" href="">Sony TT56</a>
-                                <p>$98,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/new/jbl-br.png" alt="JBL BR-55"></a>
-                                <a class="tabs__product-name" href="">JBL BR-55</a>
-                                <p>$110,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
-
-                            <article class="tabs__container">
-                                <a class="tabs__image" href="#"><img src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
-                                <a class="tabs__product-name" href="">JBL 334WN</a>
-                                <p>$140,00</p>
-                                <form action="#" method="get">
-                                    <button class="tabs__button" type="submit">Add to cart</button>
-                                </form>
-                            </article>
+                        <div data-tab-content="3" id="new" class="tabs__content">
                         </div>
                     </div>
                 </div>
@@ -938,6 +825,7 @@
     <script src="js/countdown-clock-time.js"></script>
     <script src="js/roundreviews.js"></script>
     <script src="js/product-way.js"></script>
+    <script src="js/audio-products-list.js"></script>
 </body>
 
 </html>
