Fixed banner size

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container-section">
                 <nav class="navigation">
                     <div class="navigation-logo">
-                        <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
+                        <a href="product-card.html"><img width="150" src="img/logo.svg" alt="logo"></a>
                         <div class="navigation-burger"><span></span></div>
                     </div>
                     <div class="navigation-wrapper">
@@ -94,6 +94,11 @@
                     <li class="services__indicator"></li>
                 </ul>
             </div>
+            <!-- <div class="container">
+                <button class="currency" value="USD">Usd</button>
+                <button class="currency active" value="EUR">Eur</button>
+                <button class="currency" value="UAH">Uah</button>
+            </div> -->
 
             <!--Tabs and services section-->
             <div id="container-top">
