--- a/index.html
+++ b/index.html
@@ -574,8 +574,7 @@
         </section>
         <!--roundabout reviews-->
         <section class="our-customers-say">
-            <div class="reviews-type"> 
-            </div>;
+
             <div class="title-our-customer-say">
                 <h2>Our Customers Say</h2>
             </div>
@@ -587,69 +586,13 @@
             </div>
         </section>
         <section class="person">
-            <div class="person1">
-                <img src="img/man-with-headphones.png" id="person1" alt="man-with-headphones"">
+            <div class="newproducts_container">
             </div>
-            <div class="name1">
-                <h3>Dean Williams</h3>
-            </div>
-            <div class="text1">
-                <p>"I often listen to music, and for me, first of all, it is important that the headphones sit
-                    comfortably on my head. In the Basside store, Ive found exactly what i needed at a very nice price.
-                    The customer servise also works great, and these guys helped me with the choice."</p>
-            </div>
-            <div class="date1">
-                <h4>December 15,2020</h4>
-            </div>
-        </section>
 
-        <br>
-        <section class="person">
-            <div class="person2">
-                <img src="img/girl-with-headphones.png" alt="girl-with-headphones" id="person2">
-            </div>
-            <div class="name2">
-                <h3>Jessica Gordons</h3>
-            </div>
-            <div class="text2">
-                <p>"I often listen to music, and for me, first of all, it is important that the headphones sit
-                    comfortably on my head. In the Basside store, Ive found exactly what i needed at a very nice price.
-                    The customer servise also works great, and these guys helped me with the choice."</p>
-            </div>
-            <div class="date2">
-                <h4>March 28,2021</h4>
-            </div>
-        </section>
-        <br>
-        <section class="person">
-            <div class="person3">
-                <img src="img/smiling-man.png" alt="smiling-man" id="person3">
-            </div>
-            <div class="name3">
-                <h3>Eric Smith</h3>
-            </div>
-            <div class="text1">
-                <p>"I often listen to music, and for me, first of all, it is important that the headphones sit
-                    comfortably on my head. In the Basside store, Ive found exactly what i needed at a very nice price.
-                    The customer servise also works great, and these guys helped me with the choice."</p>
-            </div>
-            <div class="date3">
-                <h4>May 29,2021</h4>
-            </div>
-        </section>
-                
-        <article class="News">
-            <section class="popular-article">
-                <div class="title-pop-art"></div>
-                <h2>Popular Articles</h2>
-                </div>
-                <div class="logo-main2">
-                    <img src="img/logo-main.svg" alt="Main" id="logo-main2">
-                </div>
+            <button class="btn slide-prev" id="slide-prev">Back</button>
+            <button class="btn slide-next" id="slide-next">Next</button>
 
-                <div class="subtitle-pop-art">
-                    <p>Want to learn more about the world of audio gadgets? Follow our blog posts!</p>
-                </div>
+            
             </section>
 
 
